fix(Navbar.css): increase logo image height for better visibility

--- a/booking/src/NavBar/Navbar.css
+++ b/booking/src/NavBar/Navbar.css
@@ -39,7 +39,7 @@
   text-decoration: none;
 } */
  .logo img {
-  height: 35px;   /* adjust size */
+  height: 50px;   /* adjust size */
   width: auto;
   cursor: pointer;
 }
